--- a/ivy.xml
+++ b/ivy.xml
@@ -8,12 +8,12 @@
     <conf name="analysis" extends="build" visibility="private"/>
   </configurations>
   <dependencies>
-    <dependency org="com.beust" name="jcommander" rev="1.20"
-                conf="default"/>
+    <dependency org="commons-lang" name="commons-lang" rev="2.0" conf ="default"/>
+    <dependency org="commons-cli" name="commons-cli" rev="1.0" conf ="default"/>
 
     <!-- Build -->
-    <dependency org="org.projectlombok" name="lombok" rev="0.10.4"
-                conf="build->default"/>
+    <!-- dependency org="org.projectlombok" name="lombok" rev="0.10.4"
+                conf="build->default"/ -->
 
     <!-- Unit Test -->
     <dependency org="junit" name="junit" rev="4.10"
